--- a/.pdkignore
+++ b/.pdkignore
@@ -26,3 +26,26 @@
 .envrc
 /inventory.yaml
 /spec/fixtures/litmus_inventory.yaml
+/.fixtures.yml
+/Gemfile
+/.gitattributes
+/.github/
+/.gitignore
+/.pdkignore
+/.puppet-lint.rc
+/Rakefile
+/rakelib/
+/.rspec
+/..yml
+/.yardopts
+/spec/
+/.vscode/
+/.sync.yml
+/.devcontainer/
+/.*.yml
+/pdk.yaml
+/.pmtignore
+/fetch_checksums.sh
+/.git*
+/.editorconfig
+/provision.yaml
