--- a/.sync.yml
+++ b/.sync.yml
@@ -23,3 +23,10 @@ spec/spec_helper.rb:
   minimum_code_coverage_percentage: 0
 spec/default_facts.yml:
   delete: true
+
+Gemfile:
+  optional:
+    ':development':
+      - gem: 'github_changelog_generator'
+        version: '~> 1.15'
+        condition: "Gem::Version.new(RUBY_VERSION.dup) >= Gem::Version.new('2.3.0')"
