--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - labeled
       - synchronize
     branches:
-      - 'master'
+      - 'main'
     paths-ignore:
       - '**.md'
       - 'examples/**'
