--- a/data/Debian.yaml
+++ b/data/Debian.yaml
@@ -1,13 +1,15 @@
 ---
 realmd::krb_client_package_name: krb5-user
 realmd::required_packages:
-  sssd-tools:
+  libnss-sss:
     ensure: installed
   libpam-modules:
     ensure: installed
-  libnss-sss:
-    ensure: installed
   libpam-sss:
     ensure: installed
+  packagekit:
+    ensure: installed
   samba-common-bin:
+    ensure: installed
+  sssd-tools:
     ensure: installed
