Allow to change sssd config file mode

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -11,6 +11,7 @@ realmd::sssd_package_ensure: installed
 realmd::sssd_service_name: sssd
 realmd::sssd_service_ensure: running
 realmd::sssd_config_file: /etc/sssd/sssd.conf
+realmd::sssd_config_file_mode: '0600'
 realmd::sssd_config: {}
 realmd::sssd_config_cache_file: /var/lib/sss/db/config.ldb
 realmd::manage_sssd_config: false
